@@ -1,1 +1,1 @@
-2.0.0rc5
+2.0.0rc6
