@@ -1,4 +1,4 @@
-# $Id: mk_modules,v 1.6 2010/01/14 12:28:29 tho Exp $
+# $Id: mk_modules,v 1.7 2010/01/22 21:17:52 tho Exp $
 
 #
 # --no_hmap
@@ -116,6 +116,20 @@ __makl_no_ringbuffer ()
 { 
     makl_set_var "NO_RB" ;
 }
+
+#
+# --no_pqueue
+#
+makl_args_def   \
+    "no_pqueue" \
+    "" ""       \
+    "disable priority queue module"
+
+__makl_no_pqueue () 
+{ 
+    makl_set_var "NO_PQUEUE" ;
+}
+
 
 #
 # --no_docs
