@@ -52,6 +52,7 @@ OPTION can be defined as follows:
 --no_list           disable list module
 --no_array          disable array module
 --no_ringbuffer     disable ring buffer module
+--no_pqueue         disable priority queue module
 --no_ipv6           disable IPv6 support
 --no_unixsock       disable Unix socket support
 --no_sctp           disable SCTP protocol support
