@@ -18,6 +18,9 @@ int main(int argc, char **argv)
 #ifndef NO_NET
     U_TEST_SUITE_ADD(uri);
 #endif
+#ifndef NO_PQUEUE
+    U_TEST_SUITE_ADD(pqueue);
+#endif
 
     return u_test_run(argc, argv);
 }
