@@ -1,8 +1,9 @@
-$Id: ChangeLog,v 1.95 2010/01/22 10:17:29 tho Exp $
+$Id: ChangeLog,v 1.96 2010/01/22 21:17:52 tho Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU 2.0.0
+	- [pqueue] added priority queue module
 	- [carpal] dbg(), warn(), info(), err() and friends have been prefixed 
 	  with "u_" to avoid conflicts with the <err.h> header
 	- [rb] added new ring buffer module
